# CHAT

./: .clangd  .gitignore  .gitignore.swp
CHAT/: .gitignore  CMakeLists.txt  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h
CHAT/execu/CHAT.app/Contents/: Info.plist
CHAT/execu/CHAT.app/Contents/MacOS/: CHAT
CHAT/resources/: facebookicon.icns
CHAT/style/: stylesheet.qss  stylesheet.qss.autosave
GATESERVER/: CMakeLists.txt  main.cpp
GATESERVER/.cache/clangd/index/: main.cpp.B3924B6F6D8B0973.idx
GATESERVER/header/: CServer.h  HttpConnection.h  LogicSystem.h  const.h  singleton.h
GATESERVER/src/: CServer.cpp  GateServer.cpp  HttpConnection.cpp  LogicSytsem.cpp
JSON/: CMakeLists.txt  json.cpp
JSON/.cache/clangd/index/: json.cpp.96AAB0C267A46B7A.idx
